@startuml er_model
title ER model of the application
' avoid problems with angled crows feet
skinparam linetype ortho

entity "Currency Type" as currtp {
  * id : number <<generated>>
  ---
  * abbreviation : string
  * name : string
}

entity "Recurrence Type" as recurrtp {
  * id : number <<generated>>
  ---
  * name : string
  * perYear : number
}

entity "Predifined Expense" as pexp {
  * id : number <<generated>>
  ---
  * name : string
  * description : string
  * value : number
  ---
  * recurrence_type_id : number <<fk>>
  * currency_type_id : number <<fk>>
}

entity "User" as user {
  * id : number <<generated>>
  ---
  * email : string
  * username : string
  * password : string
  activated : boolean
}

entity "Account Activation" as account_activation {
  * id : number <<generated>>
  ---
  * token : string
  * user_id : number <<fk>>
  * expiration : date
}

entity "User Expense" as uexp {
  * id : number <<generated>>
  ---
  * value : number
  * name : string
  * description : string
  * startDate : date
  ---
  * user_id : number <<fk>>
  * predefined_expense_id : number <<fk>>
  * recurrence_type_id : number <<fk>>
  * currency_type_id : number <<fk>>
}

entity "Transaction" as utran {
  * id : number <<generated>>
  ---
  * donor_name : string
  * value : number
  * date : date
  ---
  * user_expense_id : number <<fk>>
  * currency_type_id : number <<fk>>
}

uexp }o--|| user
account_activation ||--|| user
uexp }o--|| currtp
uexp }o--|| recurrtp

utran }o--|| uexp
utran }o--|| currtp
uexp }o--o| pexp
pexp }o--|| currtp
pexp }o--|| recurrtp
@enduml
